<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!--主界面顶部设计-->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/bagBtn"
            android:text="@string/bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />
        <Button
            android:id="@+id/shopBtn"
            android:text="@string/shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bagBtn"
            android:layout_marginLeft="@dimen/menu_margin"
            android:layout_centerVertical="true" />
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/shopBtn"
            android:layout_marginLeft="@dimen/menu_margin"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/diamondTv"
            android:text="@string/diamond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/shopBtn"
            android:layout_marginLeft="160dp"
            android:layout_centerVertical="true" />
        <Button
            android:id="@+id/addDiamond"
            android:text="@string/add"
            android:layout_width="@dimen/add_width"
            android:layout_height="@dimen/add_height"
            android:layout_toRightOf="@id/diamondTv"
            android:layout_marginLeft="@dimen/menu_margin"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/goldTv"
            android:text="@string/gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/addDiamond"
            android:layout_marginLeft="@dimen/menu_margin"
            android:layout_centerVertical="true" />
        <Button
            android:id="@+id/addGold"
            android:text="@string/add"
            android:layout_width="@dimen/add_width"
            android:layout_height="@dimen/add_height"
            android:layout_toRightOf="@id/goldTv"
            android:layout_marginLeft="@dimen/menu_margin"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <!--主界面中部关卡选择设计-->
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scrollbars="horizontal"
        android:layout_margin="@dimen/menu_margin"
        >
        <LinearLayout
            android:id="@+id/hsvll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
        </LinearLayout>
    </HorizontalScrollView>
    <!--主界面底部设计-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/exitBtn"
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/settingBtn"
            android:text="@string/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/authorBtn"
            android:text="@string/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faceback"
            />
        <Button
            android:id="@+id/resetUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetUser"
            />
    </LinearLayout>
</RelativeLayout>
