<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:id="@+id/timesTask"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        >
        <TextView
            android:id="@+id/timesTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timesTip"
            />
        <ImageView
            android:id="@+id/taskImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timesTip"
            android:layout_marginTop="@dimen/grid_margin"
            />
        <TextView
            android:id="@+id/timesLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/taskImage"
            android:text="123"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/taskRequirements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <!-- 这里添加游戏画板 -->
    <link.cjyong.com.linklink.view.GameView
        android:id="@+id/gameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/timeTask"
        android:layout_centerVertical="true"
        />


    <RelativeLayout
        android:id="@+id/pauserl"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="right"
        android:layout_alignParentRight="true"
        >
        <Button
            android:id="@+id/pauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/pauserl"
        android:gravity="center_vertical"
        >
        <!--这里添加各种道具-->
        <Button
            android:id="@+id/addTimeTool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_tool"
            />
        <Button
            android:id="@+id/helpTool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_tool"
            />
        <Button
            android:id="@+id/boomTool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boom_tool"
            />
        <Button
            android:id="@+id/resetTool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_tool"
            />
    </LinearLayout>
</RelativeLayout>
